--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -865,7 +865,10 @@ footer {
 .view-new-teen-books{
   min-height:400px;   
 }
-
+.grid_24{
+  margin-left:0px;
+  margin-right:0px;
+}
 
 /*Testing something*/
 
